--- a/myskills.html
+++ b/myskills.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>John Markowitz</title>
+	<title>Brandon Hastings</title>
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
@@ -34,19 +34,19 @@
 			<section id="main">
 				<div class="skills_holder">
 					<div class="column">
-						<h2>Graphic skills:</h2>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-						<ul class="progress">
-							<li><span class="photoshop">Photoshop</span></li>
-							<li><span class="illustrator">Illustrator</span></li>
-							<li><span class="indesign">InDesign</span></li>
-							<li><span class="flash">Flash</span></li>
+						<h2>Data management:</h2>
+						<p>In my current working environment, I have learned and deployed a diverse set of tools for data management.</p>
+						<ul class="full">
+							<li><span class="Python">Python</span></li>
+							<li><span class="SQL">SQL</span></li>
+							<li><span class="Tableau Prep">Tableau prep</span></li>
+							<li><span class="R tidyverse">R Tidyverse</span></li>
 						</ul>
 					</div>
 					<div class="column column-add">
-						<h2>Development  skills:</h2>
-						<p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis. Perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
-						<ul class="progress">
+						<h2>Data visualization:</h2>
+						<p>Proper data visualization is key to understanding the driving forces behind a trend, I accomplish this through the following tools:</p>
+						<ul class="full">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
 							<li><span class="jquery">jQuery</span></li>
@@ -54,7 +54,7 @@
 						</ul>
 					</div>
 				</div>
-				<ul class="plagin_list">
+				<!-- <ul class="plagin_list">
 					<li class="li_1"><a href="#">ps</a></li>
 					<li class="li_2"><a href="#">ai</a></li>
 					<li class="li_3"><a href="#">ld</a></li>
@@ -77,7 +77,7 @@
 					<li class="li_8"><a href="#">seo</a></li>
 				</ul>
 				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-				<p>Qui officia deserunt mollitia animi, id est laborum et dolorum fuga. <span>Et harum quidem rerum facilis est et expedita distinctio</span> . Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+				<p>Qui officia deserunt mollitia animi, id est laborum et dolorum fuga. <span>Et harum quidem rerum facilis est et expedita distinctio</span> . Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p> -->
 			</section>
 		</div>
 		<footer id="footer">
