--- a/myskills.html
+++ b/myskills.html
@@ -36,7 +36,7 @@
 					<div class="column">
 						<h2>Data management:</h2>
 						<p>In my current working environment, I have learned and deployed a diverse set of tools for data management.</p>
-						<ul class="full">
+						<ul class="progress">
 							<li><span class="Python">Python</span></li>
 							<li><span class="SQL">SQL</span></li>
 							<li><span class="Tableau Prep">Tableau prep</span></li>
@@ -46,7 +46,7 @@
 					<div class="column column-add">
 						<h2>Data visualization:</h2>
 						<p>Proper data visualization is key to understanding the driving forces behind a trend, I accomplish this through the following tools:</p>
-						<ul class="full">
+						<ul class="progress">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
 							<li><span class="jquery">jQuery</span></li>
