--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>John Markowitz</title>
+	<title>Brandon Hastings</title>
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
@@ -24,12 +24,12 @@
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
 							<li><a href="myskills.html">My skills</a></li>
-							<li><a href="Portfolio.html">Portfolio</a></li>
-							<li><a href="Contact.html">Contact</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
-				<h1 class="logo">John Markowitz</h1>
-				<h2 class="slogan">Professional Web Designer</h2>
+				<h1 class="logo">Brandon Hastings</h1>
+				<h2 class="slogan">Biology Graduate Student</h2>
 			</header>
 		</div>
 		<div class="wrapper-holder grey">
