--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,11 @@
 		<footer id="footer">
 			<div class="footer-content">
 				<ul class="social">
-					<!-- <li class="linkedin"><a href="#">Email</a></li>
+					<li class="email"><a href="#">bhastin@gmu.edu</a></li>
 					<li class="facebook"><a href="#">Facebook</a></li>
 					<li class="google"><a href="#">Google+</a></li>
 					<li class="twitter"><a href="#">Twitter</a></li>
-					<li class="pinterest"><a href="#">Pinterest</a></li> -->
+					<li class="pinterest"><a href="#">Pinterest</a></li>
 				</ul>
 				<!-- <p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p> -->
 				<a target="_blank" href="http://www.themezy.com">Website template credit: Themezy!</a>
