--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<li class="twitter"><a href="#">Twitter</a></li>
 					<li class="pinterest"><a href="#">Pinterest</a></li>
 				</ul>
-				<p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p>
+				<a target="_blank" href="http://www.themezy.com">Website template credit: Themezy!</a>
 			</div>
 		</footer>	
 	</div>
