--- a/myskills.html
+++ b/myskills.html
@@ -35,49 +35,25 @@
 				<div class="skills_holder">
 					<div class="column">
 						<h2>Data management:</h2>
-						<p>In my current working environment, I have learned and deployed a diverse set of tools for data management.</p>
+						<p>Ensuring that data is properly cleaned, sorted, and managed is an essential first step in any analytics workflow, I employ diverse tools to accomplish this:</p>
 						<ul class="progress">
-							<li><span class="Python">Python</span></li>
+							<li><span class="Python: Pandas and NumPy">Python: Pandas and NumPy</span></li>
 							<li><span class="SQL">SQL</span></li>
 							<li><span class="Tableau Prep">Tableau prep</span></li>
-							<li><span class="R tidyverse">R Tidyverse</span></li>
+							<li><span class="R: tidyverse">R: Tidyverse</span></li>
 						</ul>
 					</div>
 					<div class="column column-add">
 						<h2>Data visualization:</h2>
 						<p>Proper data visualization is key to understanding the driving forces behind a trend, I accomplish this through the following tools:</p>
 						<ul class="progress">
-							<li><span class="html">html</span></li>
-							<li><span class="wordpress">Wordpress</span></li>
-							<li><span class="jquery">jQuery</span></li>
-							<li><span class="seo">SEO</span></li>
+							<li><span class="Python: matplotlib">Python: matplotlib</span></li>
+							<li><span class="Tableau">Tableau</span></li>
+							<li><span class="R: ggplot2">R: ggplot2</span></li>
+							<li><span class="Excel">Excel</span></li>
 						</ul>
 					</div>
 				</div>
-				<!-- <ul class="plagin_list">
-					<li class="li_1"><a href="#">ps</a></li>
-					<li class="li_2"><a href="#">ai</a></li>
-					<li class="li_3"><a href="#">ld</a></li>
-					<li class="li_4"><a href="#">fl</a></li>
-					<li class="li_5"><a href="#">html</a></li>
-					<li class="li_6"><a href="#">wp</a></li>
-					<li class="li_7"><a href="#">jq</a></li>
-					<li class="li_8"><a href="#">seo</a></li>
-				</ul>
-				<ul class="plagin_list none">
-					<li class="li_1"><a href="#">ps</a></li>
-					<li class="li_2"><a href="#">ai</a></li>
-					<li class="li_3"><a href="#">ld</a></li>
-					<li class="li_4"><a href="#">fl</a></li>
-				</ul>
-				<ul class="plagin_list none">
-					<li class="li_5"><a href="#">html</a></li>
-					<li class="li_6"><a href="#">wp</a></li>
-					<li class="li_7"><a href="#">jq</a></li>
-					<li class="li_8"><a href="#">seo</a></li>
-				</ul>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-				<p>Qui officia deserunt mollitia animi, id est laborum et dolorum fuga. <span>Et harum quidem rerum facilis est et expedita distinctio</span> . Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p> -->
 			</section>
 		</div>
 		<footer id="footer">
@@ -89,7 +65,7 @@
 					<li class="twitter"><a href="#">Twitter</a></li>
 					<li class="pinterest"><a href="#">Pinterest</a></li>
 				</ul>
-				<p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p>
+				<a target="_blank" href="http://www.themezy.com">Website template credit: Themezy!</a>
 			</div>
 		</footer>	
 	</div>
