href links, objective statement

--- a/index.html
+++ b/index.html
@@ -34,59 +34,12 @@
 		</div>
 		<div class="wrapper-holder grey">
 			<section id="main">
-				<h2>Here are my biggest achievements</h2>
-				<div class="box_timeline_holder">
-					<div class="box_timeline">
-						<ul>
-							<li>
-								<div class="date">
-									<span>12/09</span>
-								</div>
-								<h3>tempora incidunt</h3>
-								<p>Dolor sit consectetur adipisicing elit, sed do eiusmod tempor</p>
-							</li>
-							<li>
-								<div class="date">
-									<span>02/10</span>
-								</div>
-								<h3>nemo enim ipsam</h3>
-								<p>Laudantium totam rem aperiam eaque ipsa quae</p>
-							</li>
-							<li>
-								<div class="date">
-									<span>09/11</span>
-								</div>
-								<h3>unde omnis iste</h3>
-								<p>Eaque ipsa quae illo inventore veritatis et quasi architecto </p>
-							</li>
-							<li>
-								<div class="date">
-									<span>06/12</span>
-								</div>
-								<h3>porro quisquam</h3>
-								<p>Dolorem ipsum quia consectetur adipisci velit sed quia non</p>
-							</li>
-							<li>
-								<div class="date">
-									<span>11/13</span>
-								</div>
-								<h3>dolorem eum</h3>
-								<p>Nodi tempora incidunt ut labore dolore magnam</p>
-							</li>
-						</ul>
-					</div>
-				</div>
+				<h2>Objective</h2>
+				<p>Throughout my education in Biology I have gained experience managing, visualizing, and communicating diverse datasets from multiple fields.</p>
 			</section>
 		</div>
 		<footer id="footer">
 			<div class="footer-content">
-				<ul class="social">
-					<li class="email"><a href="#">Email</a></li>
-					<li class="facebook"><a href="#">Facebook</a></li>
-					<li class="google"><a href="#">Google+</a></li>
-					<li class="twitter"><a href="#">Twitter</a></li>
-					<li class="pinterest"><a href="#">Pinterest</a></li>
-				</ul>
 				<a target="_blank" href="http://www.themezy.com">Website template credit: Themezy!</a>
 			</div>
 		</footer>	
