--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,9 @@
 			<section id="main">
 				<div class="images_holder"><img src="headshot.jpg" alt=""></div>
 				<div class="box_contact">
-					<span class="email">bhastin@gmu.edu</span>
+					<a class="email" href="mailto: bhastin@gmu.edu">bhastin@gmu.edu</a>
 					<span class="phone">+1 757 284 4996</span>
+					<a class="linkedin" href="www.linkedin.com/in/brandon-hastings">linkedin</a>
 					<!-- <span class="skype">J_mwitz</span> -->
 				</div>
 				<div class="clear"></div>
@@ -43,13 +44,6 @@
 		</div>
 		<footer id="footer">
 			<div class="footer-content">
-				<ul class="social">
-					<li class="email"><a href="#">bhastin@gmu.edu</a></li>
-					<li class="facebook"><a href="#">Facebook</a></li>
-					<li class="google"><a href="#">Google+</a></li>
-					<li class="twitter"><a href="#">Twitter</a></li>
-					<li class="pinterest"><a href="#">Pinterest</a></li>
-				</ul>
 				<!-- <p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p> -->
 				<a target="_blank" href="http://www.themezy.com">Website template credit: Themezy!</a>
 			</div>
