--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
 			<section id="main">
 				<div class="images_holder"><img src="headshot.jpg" alt=""></div>
 				<div class="box_contact">
-					<a class="email" href="mailto: bhastin@gmu.edu">bhastin@gmu.edu</a>
+					<span class="email">bhastin@gmu.edu</span>
 					<span class="phone">+1 757 284 4996</span>
-					<a class="linkedin" href="www.linkedin.com/in/brandon-hastings">linkedin</a>
+					<span class="linkedin">www.linkedin.com/in/brandon-hastings</span>
 					<!-- <span class="skype">J_mwitz</span> -->
 				</div>
 				<div class="clear"></div>
