Updated page links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
 							<li><a href="myskills.html">My skills</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="portfolio.html">Visuals</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -34,8 +34,11 @@
 		</div>
 		<div class="wrapper-holder grey">
 			<section id="main">
-				<h2>Objective</h2>
-				<p>Throughout my education in Biology I have gained experience managing, visualizing, and communicating diverse datasets from multiple fields.</p>
+				<h2>About Me</h2>
+				<p>Throughout my education in Biology I have gained experience managing and visualizing diverse datasets from multiple fields. 
+					While knowledge of how to work with the data itself is important, it is crucial that results derived from data can be communicated effectively. 
+					I have spent time building these presentation and communication skills by presenting my research at academic conferences, writing scientific papers and grant proposals, 
+					and instructing undergraduate classes. By blending my essential communication and technical skills, I am well positioned to construct meaningful data analytics products</p>
 			</section>
 		</div>
 		<footer id="footer">
