--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="myskills.html">My skills</a></li>
-							<li><a class="active" href="portfolio.html">Portfolio</a></li>
+							<li><a class="active" href="portfolio.html">Visuals</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="wrapper-holder grey">
 			<section id="main">
-				<h2>All works that I made</h2>
+				<h2>Custom data visualizations</h2>
 				<ul id="filters" class="sub_nav">
 					<li class="active" data-filter="*">All works</li>
 					<li data-filter=".web">Web design</li>
