--- a/myskills.html
+++ b/myskills.html
@@ -49,7 +49,7 @@
 						<ul class="progress">
 							<li><span class="Python: matplotlib">Python: matplotlib</span></li>
 							<li><span class="Tableau">Tableau</span></li>
-							<li><span class="R: ggplot2">R: ggplot2</span></li>
+							<li><span class="R: ggplot2">R: ggplot</span></li>
 							<li><span class="Excel">Excel</span></li>
 						</ul>
 					</div>
