Added image slides

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="../images/headshot.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Brandon Hastings</a></h1>
 					<p>Biology Graduate Student</p>
 				</header>
@@ -30,7 +30,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="www.linkedin.com/in/brandon-hastings" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/brandon-hastings" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/brandon-hastings" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto: bhastin@gmu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -50,7 +50,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<p>About Me</p>
+										<h3>About Me</h3>
 									</header>
 									<p>Throughout my education in Biology I have gained experience managing and visualizing diverse datasets from multiple fields. While knowledge of how to work with the data itself is important, it is crucial that results derived from data can be communicated effectively. I have spent time building these presentation and communication skills by presenting my research at academic conferences, writing scientific papers and grant proposals, and instructing undergraduate classes. By blending my essential communication and technical skills, I am well positioned to construct meaningful data analytics products.</p>
 								</div>
@@ -62,7 +62,7 @@
 									<h3>Skills</h3>
 									<p>Ensuring that data is properly cleaned, sorted, and managed is a vital first step to any data analytics workflow. Following this with appropriate data visualizations is key to understanding the driving forces behind a trend. I employ a diverse set of tools to accomplish these tasks:</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-python">Python: Pandas and NumPy</li>
+										<li class="icon brands fa-python">Python: Pandas and NumPy</li>
 										<li class="icon solid fa-chart-line">Tableau</li>
 										<li class="icon solid fa-database">SQL</li>
 										<li class="icon solid fa-table">Tableau Prep</li>
@@ -79,7 +79,13 @@
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div id="cincopa_eb2582">...</div><script type="text/javascript">
+												var cpo = []; cpo["_object"] ="cincopa_eb2582"; cpo["_fid"] = "AQIAX6OCZMa1";
+												var _cpmp = _cpmp || []; _cpmp.push(cpo);
+												(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+												cp.async = true; cp.src = "https://rtcdn.cincopa.com/libasync.js";
+												var c = document.getElementsByTagName("script")[0];
+												c.parentNode.insertBefore(cp, c); })(); </script>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
