--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 							<section id="three">
 								<div class="container">
 									<h3>Visualizations</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Visualizations are key to understanding the trends and make up of data. The following visualizations were made in tableau using publicly available data sets.</p>
 									<div class="features">
 										<article>
+											<h4>Factors contributing to population change by state</h4>
 											<div id="cincopa_eb2582">...</div><script type="text/javascript">
 												var cpo = []; cpo["_object"] ="cincopa_eb2582"; cpo["_fid"] = "AQIAX6OCZMa1";
 												var _cpmp = _cpmp || []; _cpmp.push(cpo);
@@ -87,30 +88,45 @@
 												var c = document.getElementsByTagName("script")[0];
 												c.parentNode.insertBefore(cp, c); })(); </script>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<!-- <h4>Factors contributing to population change by state</h4> -->
+												<p>The first graph represents how net births and migrations contribute to the population change of each state, shown for 2010 and 2015. 
+													It appears that population growth in 2010 was due to net births, while in 2015 it was due to migration. This second graph confirms that in the states with the highest population growth,
+													net births was the main contributor in 2010 but not in 2015. Attempts were made to find the driving force behind these trends using various data sets such as median state income, quality of life, and job growth per state for each year, 
+													but no correlation was found. Overall, it was a good excercise that forced me to pull in data from various sources to be used in an attempt to better understand trends in the initial dataset.
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div id="cincopa_cd500a">...</div><script type="text/javascript">
+												var cpo = []; cpo["_object"] ="cincopa_cd500a"; cpo["_fid"] = "AQOAA6uPZwC2";
+												var _cpmp = _cpmp || []; _cpmp.push(cpo);
+												(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+												cp.async = true; cp.src = "https://rtcdn.cincopa.com/libasync.js";
+												var c = document.getElementsByTagName("script")[0];
+												c.parentNode.insertBefore(cp, c); })(); </script>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Visualizing state rankings by metric</h4>
+												<p>I encountered this data from cnbc ranking each state and I was curious to see how exactly the states were ranked. 
+													The first graph shows the total score for each state by the sum of each category score. As a lower rank denotes the better state, the lower the total score, the highest rank. 
+													While the graph follows this general trend, it is not a step-wise ranking based on total score. 
+													The second graph seeks to visualize if any category significantly contributes to the total score. As a lower score is better, this graph looks at the percent of total of the inverse of each category, so a higher ranking category score appears as a larger colored area of each column.
+													It appears, however, that no category significantly contributes to a higher state ranking, so it is unclear exactly how these scores were calculated.
+												</p>
 											</div>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Snapped dark matter in the wild</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
-										</article>
+										</article> -->
 									</div>
 								</div>
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<!-- <section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -129,7 +145,7 @@
 										</div>
 									</form>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Five -->
 						<!--
