--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Visuals</a></li>
-						<li><a href="#four">Contact</a></li>
+						<!-- <li><a href="#four">Contact</a></li> -->
 					</ul>
 				</nav>
 				<footer>
@@ -46,7 +46,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/web_banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
