--- a/index.html
+++ b/index.html
@@ -89,14 +89,11 @@
 												c.parentNode.insertBefore(cp, c); })(); </script>
 											<div class="inner">
 												<!-- <h4>Factors contributing to population change by state</h4> -->
-												<p>The first graph represents how net births and migrations contribute to the population change of each state, shown for 2010 and 2015. 
-													It appears that population growth in 2010 was due to net births, while in 2015 it was due to migration. This second graph confirms that in the states with the highest population growth,
-													net births was the main contributor in 2010 but not in 2015. Attempts were made to find the driving force behind these trends using various data sets such as median state income, quality of life, and job growth per state for each year, 
-													but no correlation was found. Overall, it was a good excercise that forced me to pull in data from various sources to be used in an attempt to better understand trends in the initial dataset.
-												</p>
+												<p>The first graph represents how net births and migrations contribute to the population change of each state, shown for 2010 and 2015. It appears that population growth in 2010 was due to net births, while in 2015 it was due to migration. This second graph confirms that in the states with the highest population growth, net births was the main contributor in 2010 but not in 2015. Attempts were made to find the driving force behind these trends using various data sets such as median state income, quality of life, and job growth per state for each year, but no correlation was found. Overall, it was a good excercise that forced me to pull in data from various sources to be used in an attempt to better understand trends in the initial dataset.</p>
 											</div>
 										</article>
 										<article>
+											<h4>Visualizing state rankings by metric</h4>
 											<div id="cincopa_cd500a">...</div><script type="text/javascript">
 												var cpo = []; cpo["_object"] ="cincopa_cd500a"; cpo["_fid"] = "AQOAA6uPZwC2";
 												var _cpmp = _cpmp || []; _cpmp.push(cpo);
@@ -105,13 +102,7 @@
 												var c = document.getElementsByTagName("script")[0];
 												c.parentNode.insertBefore(cp, c); })(); </script>
 											<div class="inner">
-												<h4>Visualizing state rankings by metric</h4>
-												<p>I encountered this data from cnbc ranking each state and I was curious to see how exactly the states were ranked. 
-													The first graph shows the total score for each state by the sum of each category score. As a lower rank denotes the better state, the lower the total score, the highest rank. 
-													While the graph follows this general trend, it is not a step-wise ranking based on total score. 
-													The second graph seeks to visualize if any category significantly contributes to the total score. As a lower score is better, this graph looks at the percent of total of the inverse of each category, so a higher ranking category score appears as a larger colored area of each column.
-													It appears, however, that no category significantly contributes to a higher state ranking, so it is unclear exactly how these scores were calculated.
-												</p>
+												<p>I encountered this data from cnbc ranking each state and I was curious to see how exactly the states were ranked. The first graph shows the total score for each state by the sum of each category score. As a lower rank denotes the better state, the lower the total score, the highest rank. While the graph follows this general trend, it is not a step-wise ranking based on total score. The second graph seeks to visualize if any category significantly contributes to the total score. As a lower score is better, this graph looks at the percent of total of the inverse of each category, so a higher ranking category score appears as a larger colored area of each column. It appears, however, that no category significantly contributes to a higher state ranking, so it is unclear exactly how these scores were calculated.</p>
 											</div>
 										</article>
 										<!-- <article>
