--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 												cp.async = true; cp.src = "https://rtcdn.cincopa.com/libasync.js";
 												var c = document.getElementsByTagName("script")[0];
 												c.parentNode.insertBefore(cp, c); })(); </script>
-											<div class="inner">
+											<!-- <div class="inner"> -->
 												<!-- <h4>Factors contributing to population change by state</h4> -->
-												<p>The first graph represents how net births and migrations contribute to the population change of each state, shown for 2010 and 2015. It appears that population growth in 2010 was due to net births, while in 2015 it was due to migration. This second graph confirms that in the states with the highest population growth, net births was the main contributor in 2010 but not in 2015. Attempts were made to find the driving force behind these trends using various data sets such as median state income, quality of life, and job growth per state for each year, but no correlation was found. Overall, it was a good excercise that forced me to pull in data from various sources to be used in an attempt to better understand trends in the initial dataset.</p>
-											</div>
+											<p>The first graph represents how net births and migrations contribute to the population change of each state, shown for 2010 and 2015. It appears that population growth in 2010 was due to net births, while in 2015 it was due to migration. This second graph confirms that in the states with the highest population growth, net births was the main contributor in 2010 but not in 2015. Attempts were made to find the driving force behind these trends using various data sets such as median state income, quality of life, and job growth per state for each year, but no correlation was found. Overall, it was a good excercise that forced me to pull in data from various sources to be used in an attempt to better understand trends in the initial dataset.</p>
+											<!-- </div> -->
 										</article>
 										<article>
 											<h4>Visualizing state rankings by metric</h4>
