--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 												cp.async = true; cp.src = "https://rtcdn.cincopa.com/libasync.js";
 												var c = document.getElementsByTagName("script")[0];
 												c.parentNode.insertBefore(cp, c); })(); </script>
-											<div class="inner">
+											<!-- <div class="inner"> -->
 												<p>I encountered this data from cnbc ranking each state and I was curious to see how exactly the states were ranked. The first graph shows the total score for each state by the sum of each category score. As a lower rank denotes the better state, the lower the total score, the highest rank. While the graph follows this general trend, it is not a step-wise ranking based on total score. The second graph seeks to visualize if any category significantly contributes to the total score. As a lower score is better, this graph looks at the percent of total of the inverse of each category, so a higher ranking category score appears as a larger colored area of each column. It appears, however, that no category significantly contributes to a higher state ranking, so it is unclear exactly how these scores were calculated.</p>
-											</div>
+											<!-- </div> -->
 										</article>
 										<!-- <article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
