--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="../images/headshot.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Brandon Hastings</a></h1>
-					<p>Biology Graduate Student</p>
+					<p>Data Analyst</p>
 				</header>
 				<nav id="nav">
 					<ul>
