--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
 									</div>
 								</div>
 							</section>
+						<!-- Four -->
+<!-- 							<section id="four">
+								<div class="container">
+									<header class="major">
+										<h3>Publications</h3>
+									</header>
+									<p></p>
+								</div>
+							</section> -->
 
 						<!-- Four -->
 							<!-- <section id="four">
