--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills</a></li>
+						<!-- <li><a href="#four">Projects</a></li> -->
 						<li><a href="#three">Visuals</a></li>
-						<!-- <li><a href="#four">Contact</a></li> -->
+						
 					</ul>
 				</nav>
 				<footer>
@@ -52,7 +53,11 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Throughout my education in Biology I have gained experience managing and visualizing diverse datasets from multiple fields. While knowledge of how to work with the data itself is important, it is crucial that results derived from data can be communicated effectively. I have spent time building these presentation and communication skills by presenting my research at academic conferences, writing scientific papers and grant proposals, and instructing undergraduate classes. By blending my essential communication and technical skills, I am well positioned to construct meaningful data analytics products.</p>
+									<p>I am an integrative biologist with a strong background in animal biology, functional morphology, data
+									analytics, and software development gained through 6 years of education in biology and 4 years of combined
+									research and industry experience. I am proficient in Python, R, and git version control with experience in
+									object detection and natural language processing.
+									</p>
 								</div>
 							</section>
 
@@ -60,14 +65,17 @@
 							<section id="two">
 								<div class="container">
 									<h3>Skills</h3>
-									<p>Ensuring that data is properly cleaned, sorted, and managed is a vital first step to any data analytics workflow. Following this with appropriate data visualizations is key to understanding the driving forces behind a trend. I employ a diverse set of tools to accomplish these tasks:</p>
+									<p>When I first made this website the first sentence here read "Ensuring that data is properly cleaned, sorted, and managed is a vital first step to any data analytics workflow."
+										I stand by that statement. I have since grown my reptoire to include a stronger focus on software design, statistics, and machine learning,
+										but proper data engineering always plays a vital role in any project I work on.
+									</p>
 									<ul class="feature-icons">
-										<li class="icon brands fa-python">Python: Pandas and NumPy</li>
+										<li class="icon solid fa-code">Python Object Oriented Design</li>
 										<li class="icon solid fa-chart-line">Tableau</li>
 										<li class="icon solid fa-database">SQL</li>
-										<li class="icon solid fa-table">Tableau Prep</li>
-										<li class="icon solid fa-code">rStudio: Tidyverse</li>
-										<li class="icon solid fa-chart-bar">rStudio: ggplot</li>
+										<li class=<"fa-solid fa-share-nodes">Unsupervised machine learning</li>
+										<li class="icon brands fa-python">Python: NumPy and Pandas</li>
+										<li class="icon solid fa-chart-bar">rStudio: Tidyverse and ggplot</li>
 									</ul>
 								</div>
 							</section>
@@ -119,8 +127,10 @@
 						<!-- Four -->
 							<!-- <section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Projects</h3>
+									<p>Many of my programming projects focus on image analysis, specifically clustering algorithms in Python that can be useful to color and pattern analysis. 
+						I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
+						Click the GitHub icon at the bottom of the page to check them out.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
