--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills</a></li>
-						<!-- <li><a href="#four">Projects</a></li> -->
+						<li><a href="#four">Projects</a></li>
 						<li><a href="#three">Visuals</a></li>
 						
 					</ul>
@@ -124,13 +124,13 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<!-- <section id="four">
+<!-- 						Four -->
+							<section id="four">
 								<div class="container">
 									<h3>Projects</h3>
 									<p>Many of my programming projects focus on image analysis, specifically clustering algorithms in Python that can be useful to color and pattern analysis. 
-						I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
-						Click the GitHub icon at the bottom of the page to check them out.</p>
+									I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
+									Click the GitHub icon at the bottom of the page to check them out.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -146,7 +146,7 @@
 										</div>
 									</form>
 								</div>
-							</section> -->
+							</section>
 
 						<!-- Five -->
 						<!--
