--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 									<p>I am an integrative biologist with a strong background in animal biology, functional morphology, data
 									analytics, and software development gained through 6 years of education in biology and 4 years of combined
 									research and industry experience. I am proficient in Python, R, and git version control with experience in
-									object detection and natural language processing.
+									object detection and natural language processing. I would like to leverage my experience to contribute to 
+									the analysis of biomedical and genomics data.
 									</p>
 								</div>
 							</section>
@@ -67,13 +68,13 @@
 									<h3>Skills</h3>
 									<p>When I first made this website the first sentence here read "Ensuring that data is properly cleaned, sorted, and managed is a vital first step to any data analytics workflow."
 										I stand by that statement. I have since grown my reptoire to include a stronger focus on software design, statistics, and machine learning,
-										but proper data engineering always plays a vital role in any project I work on.
+										but proper data engineering always plays a vital role in any project I work on. These are some of the tools I use most often in my work:
 									</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Python Object Oriented Design</li>
 										<li class="icon solid fa-chart-line">Tableau</li>
 										<li class="icon solid fa-database">SQL</li>
-										<li class=<"fa-solid fa-share-nodes">Unsupervised machine learning</li>
+										<li class=<"icon solid fa-share-nodes">Unsupervised machine learning</li>
 										<li class="icon brands fa-python">Python: NumPy and Pandas</li>
 										<li class="icon solid fa-chart-bar">rStudio: Tidyverse and ggplot</li>
 									</ul>
@@ -84,7 +85,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Visualizations</h3>
-									<p>Visualizations are key to understanding the trends and make up of data. The following visualizations were made in tableau using publicly available data sets.</p>
+									<p>Visualizations should be simple, yet visually striking, as they are key to understanding and communicating the value of data. The following visualizations were made in Tableau using publicly available data sets that I found interesting.</p>
 									<div class="features">
 										<article>
 											<h4>Factors contributing to population change by state</h4>
