--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills</a></li>
-						<li><a href="#four">Projects</a></li>
-						<li><a href="#three">Visuals</a></li>
+						<li><a href="#three">Projects</a></li>
+						<li><a href="#four">Visuals</a></li>
 						
 					</ul>
 				</nav>
@@ -81,8 +81,32 @@
 								</div>
 							</section>
 
-						<!-- Three -->
+<!-- 						Four -->
 							<section id="three">
+								<div class="container">
+									<h3>Projects</h3>
+									<p>Many of my programming projects focus on image analysis, specifically clustering algorithms in Python that can be useful to color and pattern analysis. 
+									I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
+									Click the GitHub icon at the bottom of the page to check them out.</p>
+									<form method="post" action="#">
+										<div class="row gtr-uniform">
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+											<div class="col-12">
+												<ul class="actions">
+													<li><input type="submit" class="primary" value="Send Message" /></li>
+													<li><input type="reset" value="Reset Form" /></li>
+												</ul>
+											</div>
+										</div>
+									</form>
+								</div>
+							</section>
+						
+						<!-- Three -->
+							<section id="four">
 								<div class="container">
 									<h3>Visualizations</h3>
 									<p>Visualizations should be simple, yet visually striking, as they are key to understanding and communicating the value of data. The following visualizations were made in Tableau using publicly available data sets that I found interesting.</p>
@@ -125,29 +149,6 @@
 								</div>
 							</section>
 
-<!-- 						Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Projects</h3>
-									<p>Many of my programming projects focus on image analysis, specifically clustering algorithms in Python that can be useful to color and pattern analysis. 
-									I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
-									Click the GitHub icon at the bottom of the page to check them out.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
 
 						<!-- Five -->
 						<!--
