--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<li class="icon solid fa-code">Python Object Oriented Design</li>
 										<li class="icon solid fa-chart-line">Tableau</li>
 										<li class="icon solid fa-database">SQL</li>
-										<li class=<"icon solid fa-share-nodes">Unsupervised machine learning</li>
+										<li class=<"fa-solid fa-share-nodes">Unsupervised machine learning</li>
 										<li class="icon brands fa-python">Python: NumPy and Pandas</li>
 										<li class="icon solid fa-chart-bar">rStudio: Tidyverse and ggplot</li>
 									</ul>
@@ -88,7 +88,7 @@
 									<p>Many of my programming projects focus on image analysis, specifically clustering algorithms in Python that can be useful to color and pattern analysis. 
 									I am continuously growing my knowledge base surrounding program design and I believe that shows with each new project. I focus on readability with well documented code bases and strive to have my projects fit seamlessly into other programs across operating systems.
 									Click the GitHub icon at the bottom of the page to check them out.</p>
-									<form method="post" action="#">
+<!-- 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -101,7 +101,7 @@
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 								</div>
 							</section>
 						
