--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<li class="icon solid fa-code">Python Object Oriented Design</li>
 										<li class="icon solid fa-chart-line">Tableau</li>
 										<li class="icon solid fa-database">SQL</li>
-										<li class=<"fa-solid fa-share-nodes">Unsupervised machine learning</li>
+										<li class=<"icon solid fa-share-nodes">Unsupervised machine learning</li>
 										<li class="icon brands fa-python">Python: NumPy and Pandas</li>
 										<li class="icon solid fa-chart-bar">rStudio: Tidyverse and ggplot</li>
 									</ul>
